--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="login-container">
+  <div class="container login-container">
     <h1>
       Welcome Back To <br />
       NourishWise!
@@ -20,6 +20,10 @@
     <form action="dashboard.html" class="styled-form">
       <input type="email" placeholder="Enter your email.." required />
       <input type="password" placeholder="Enter your password.." minlength="6" required />
+
+      <span class="signup">
+        <a href="forget-form.html" id="forgotLabel">Forgot password?</a>
+      </span>
 
       <input type="submit" value="Login" class="submit" />
 
