--- a/forget-form.html
+++ b/forget-form.html
@@ -20,10 +20,16 @@
         <a href="sign-up.html">Signup</a>
       </span>
       <span class="signup">Already have an account?
-        <a href="login.html" >Login</a>
+        <a href="login.html">Login</a>
       </span>
     </div>
   </div>
+
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <script src="script/Forgot.js" type="module"></script>
+
 </body>
 
 </html>
