Started with the 'contactUs.css

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <img src="assets/img-1.jpg" alt="Mohammed Super" />
               </div>
               <div class="text">
-                <h4>Mohamed Super</h4>
+                <h4>Mohammed Super</h4>
                 <p>
                   "NourishWise has completely transformed my diet. The
                   personalized plans and insightful advice have been a
@@ -262,7 +262,7 @@
                 <img src="assets/img-1.jpg" alt="Igbokwe Valerie" />
               </div>
               <div class="text">
-                <h4>Val-Sta</h4>
+                <h4>Igbokwe Valerie</h4>
                 <p>
                   "I've never felt more confident in my food choices. This
                   platform makes healthy eating easy and fun!"
@@ -277,7 +277,7 @@
                 <img src="assets/img-1.jpg" alt="Ahmed.I" />
               </div>
               <div class="text">
-                <h4>Ahmed I</h4>
+                <h4>Ahmed.I</h4>
                 <p>
                   "The community and support here are unmatched. It feels great
                   to be part of a group that genuinely cares about wellness."
