--- a/contactUs.html
+++ b/contactUs.html
@@ -37,25 +37,25 @@
     <!-- =========================== FORM SECTION ===========================-->
     <div class="background-container">
       <div class="contact-container">
-        <h2>Contact Us</h2>
+        <h1>Contact Us</h1>
         <form action="index.html" class="contactUs-form">
           <div class="field-container">
             <input
-              type="text"
-              placeholder="Please enter your Fullname"
+              type="text" name="name"
+              placeholder="Enter your Fullname..."
               required
             />
           </div>
           <div class="field-container">
             <input
-              type="email"
-              placeholder="Please enter your Email"
+              type="email" name="email"
+              placeholder="Enter your Email..."
               required
             />
           </div>
-          <div class="field-container">
+          <div class="field-container message">
             <input
-              type="text"
+              type="text" name="message" id="message"
               placeholder="What would you like to say..."
               required
             />
