Adding a home link to Dieticians

--- a/contactUs.html
+++ b/contactUs.html
@@ -16,12 +16,14 @@
         <ul class="nav-list" id="nav-list">
           <li>
             <!-- <i class="fas fa-bars"></i> -->
-            <a href="" id="active">Home</a>
+            <a href="">Home</a>
           </li>
           <li><a href="diet-plan.html">Diet Plan</a></li>
           <li><a href="insight.html">Insights</a></li>
           <li><a href="dieticians.html">Dieticians</a></li>
-          <li><a href="contactUs.html" class="btn">Contact Us</a></li>
+          <li>
+            <a href="contactUs.html" class="btn">Contact Us</a>
+          </li>
         </ul>
         <div class="action-btn-container">
           <div class="user-profile">
@@ -41,21 +43,25 @@
         <form action="index.html" class="contactUs-form">
           <div class="field-container">
             <input
-              type="text" name="name"
+              type="text"
+              name="name"
               placeholder="Enter your Fullname..."
               required
             />
           </div>
           <div class="field-container">
             <input
-              type="email" name="email"
+              type="email"
+              name="email"
               placeholder="Enter your Email..."
               required
             />
           </div>
           <div class="field-container message">
             <input
-              type="text" name="message" id="message"
+              type="text"
+              name="message"
+              id="message"
               placeholder="What would you like to say..."
               required
             />
