Adding links to insights

--- a/insight.html
+++ b/insight.html
@@ -127,7 +127,7 @@
               Find quick and nutritious snack ideas that keep you energized on
               the go.
             </p>
-            <a href="https://www.eatthis.com/grab-and-go/" class="btn">Read More</a>
+            <a href="https://www.eatthis.com/grab-and-go" class="btn">Read More</a>
           </article>
 
           <article class="insight-card">
